fix: remove scrollbars in responsive

--- a/style.css
+++ b/style.css
@@ -75,8 +75,8 @@ main {
 /* DIALOG */
 dialog {
     background-color: #254670;
-    width: 768px;
-    height: 768px;
+    width: fit-content;
+    height: fit-content;
     border: 4px solid #08affc8f;
     -webkit-box-shadow: 0px 0px 15px 4px rgba(8, 175, 252, 0.534);
     box-shadow: 0px 0px 15px 4px rgba(8, 174, 252, 0.534);
